@@ -17,8 +17,6 @@
  */
 package de.elomagic.agent;
 
-import jakarta.annotation.Nonnull;
-
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -29,6 +27,7 @@ import java.lang.instrument.Instrumentation;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.security.ProtectionDomain;
 import java.util.HashSet;
@@ -47,47 +46,39 @@ public class ListLoadedClassesAgent {
     public static void premain(String agentArgs, Instrumentation inst) {
         LOGGER.always().log("My agent started");
 
-        inst.addTransformer(new ClassFileTransformer() {
-            @Override
-            public byte[] transform(
-                    ClassLoader loader,
-                    String className,
-                    Class<?> classBeingRedefined,
-                    ProtectionDomain protectionDomain,
-                    byte[] classfileBuffer) {
+        inst.addTransformer((loader, className, classBeingRedefined, protectionDomain, classfileBuffer) -> {
 
-                try {
-                    if (protectionDomain != null &&
-                            protectionDomain.getCodeSource() != null &&
-                            protectionDomain.getCodeSource().getLocation() != null) {
+            try {
+                if (protectionDomain != null &&
+                        protectionDomain.getCodeSource() != null &&
+                        protectionDomain.getCodeSource().getLocation() != null) {
 
-                        String location = protectionDomain.getCodeSource().getLocation().toString();
+                    String location = protectionDomain.getCodeSource().getLocation().toString();
 
-                        synchronized (seenJars) {
-                            if (!seenJars.contains(location)) {
-                                seenJars.add(location);
+                    synchronized (seenJars) {
+                        if (!seenJars.contains(location)) {
+                            seenJars.add(location);
 
-                                Record r = new Record(location);
-                                appendToFile(r);
+                            Record r = new Record(location);
+                            appendToFile(r);
 
-                                LOGGER.debug("Class loaded from JAR: {}", location);
-                            }
+                            LOGGER.debug("Class loaded from JAR: {}", location);
                         }
                     }
-                } catch (Exception e) {
-                    // Fehler beim Ermitteln ignorieren
                 }
-
-                return null;
+            } catch (Exception e) {
+                // Fehler beim Ermitteln ignorieren
             }
+
+            return null;
         });
     }
 
-    private static void appendToFile(@Nonnull Record r) {
+    private static void appendToFile(Record r) {
 
-        Path file = Path.of("./agent-file.csv");
+        Path file = Paths.get("./agent-file.csv");
 
-        try (BufferedWriter writer = Files.newBufferedWriter(file, StandardCharsets.UTF_8, StandardOpenOption.APPEND)) {
+        try (BufferedWriter writer = Files.newBufferedWriter(file, StandardCharsets.UTF_8, StandardOpenOption.CREATE, StandardOpenOption.APPEND)) {
             r.writeTo(writer);
         } catch (IOException e) {
             LOGGER.error("Unable to write agent file: {}", e.getMessage(), e);
